<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="10sp"
        android:paddingTop="10sp"
        android:paddingLeft="15sp"
        android:paddingRight="15sp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="270dp"
            android:layout_height="172dp"
            android:layout_gravity="center"
            android:src="@mipmap/imglogo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35sp"
            android:text="@string/indiUser"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:id="@+id/user"
            android:hint="@string/user"
            android:textSize="20sp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp"
            android:text="@string/indiPass"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:id="@+id/pass"
            android:hint="@string/pass"
            android:textSize="20sp"
            android:textAlignment="center"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="70sp"
            android:text="@string/btnIngresar"
            android:id="@+id/btnIngresar"
            android:textAlignment="center"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btnSalir"
            android:id="@+id/btnSalir"
            android:textAlignment="center"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>